# project-giskard

./: .gitignore  LICENSE  README.md  pyproject.toml
Examples/Emptying cart test/: emptying_cart_test.robot
Examples/Login/: shop_cart.robot  shop_login.robot
Examples/Login/resources/: .gitignore  locator_paths.yaml
Examples/Old login test/: login.robot
Examples/Order handling test/Tests/: Order_handling_test.robot
Examples/Resources/: .gitignore  product_names.yaml
Examples/Selector tests/: selector_tests.robot
Examples/Selenium vs Browser keywords/Environment/: locators.yaml  variables.yaml
Examples/Selenium vs Browser keywords/Tests/: blah.robot  keyword_test.robot
Examples/Simple cart test/: simple_cart_test.robot
Examples/User keywords test/: keyword_login_test.robot  user_keywords.resource
Portfolio/: README.md
Portfolio/Resources/Environment/: locators.yaml  product_names.yaml  shop_passwords_template.yaml  variables.yaml
Portfolio/Tests/: Order_handling_test.robot  README.md
Portfolio/Tests/Logs/Browser_library/: log.html  (+2 more)
The Learning Process/: README.md
The Learning Process/1_Old login test/: login.robot
The Learning Process/2_Login/: shop_cart.robot  shop_login.robot
The Learning Process/2_Login/resources/: anne_passwords.yaml
The Learning Process/3_Selector tests/: out.txt
The Learning Process/4_Simple cart test/: simple_cart_test.robot
The Learning Process/5_Emptying cart test/: emptying_cart_test.robot
The Learning Process/6_User keywords test/: keyword_login_test.robot
tests/: test2.robot  testing.robot
(+28 files in other folders)
